# UECS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compare.md  todo.md
config/: Config.cmake.in
doc/: API.md  changelog.md  comparison.md  todo.md
include/UECS/: AccessTypeID.h  AccessTypeID.hpp  Archetype.h  ArchetypeFilter.h  ArchetypeFilter.hpp  ArchetypeMngr.h  ChangeFilter.hpp  Chunk.hpp  ChunkView.h  ChunkView.hpp  CmptLocator.h  CmptLocator.hpp  CmptPtr.h  CmptPtr.hpp  CmptRegister.h  CmptRegistrar.h  CmptTag.h  CmptTraits.hpp  CmptType.h  CmptsView.h  CmptsView.hpp  CommandBuffer.hpp  Entity.h  Entity.hpp  EntityFilter.h  EntityLocator.h  EntityMngr.h  EntityMngr.hpp  EntityQuery.h  EntityQuery.hpp  IListener.h  IListener.hpp  Pool.h  RTDCmptTraits.h  RTDCmptTraits.hpp  RTDCmptViewer.h  RTDCmptsView.h  RandomAccessor.h  RandomAccessor.hpp  Schedule.h  (+19 more)
include/UECS/cmpt/: Node.h
include/UECS/core/: Archetype.h  ArchetypeMngr.h  Chunk.h  Entity.h  EntityBase.h  EntityData.h  Pool.h  World.h
include/UECS/detail/: AccessTypeID.inl  Archetype.h  Archetype.inl  ArchetypeCmptTraits.h  ArchetypeCmptTraits.inl  ArchetypeFilter.inl  ArchetypeMngr.h  ArchetypeMngr.inl  Chunk.h  Chunk.inl  ChunkView.inl  CmptIDSet.h  CmptLifecycleMngr.h  CmptMngr.h  CmptRegister.inl  CmptRegistrar.inl  CmptSysMngr.h  CmptSysMngr.inl  CmptTag.inl  CmptType.inl  CmptTypeSet.h  CmptTypeSet.inl  CmptsLocator.inl  Entity.inl  EntityBase.h  EntityData.h  EntityFilter.inl  EntityLocator.inl  EntityMngr.h  EntityMngr.inl  EntityMngrh  EntityQuery.inl  Job.h  Pool.inl  RTDCmptTraits.inl  RTSCmptTraits.h  RTSCmptTraits.inl  RuntimeCmptTraits.h  RuntimeCmptTraits.inl  Schedule.h  (+17 more)
include/UECS/details/: Archetype.h  (+21 more)
src/EMPTY/: CMakeLists.txt
src/HeadFiles/: CMakeLists.txt
src/cmpt/: CMakeLists.txt  Node.cpp
src/core/: Archetype.cpp  Archetype.h  Archetype.hpp  ArchetypeCmptTraits.cpp  ArchetypeCmptTraits.h  ArchetypeCmptTraits.hpp  ArchetypeFilter.cpp  ArchetypeMngr.cpp  CMakeLists.txt  Chunk.cpp  Chunk.h  Chunk.hpp  ChunkView.cpp  CmptLocator.cpp  CmptSysMngr.cpp  CmptTraits.cpp  CmptsView.cpp  CommandBuffer.cpp  Entity.cpp  EntityFilter.cpp  EntityLocator.cpp  EntityMngr.cpp  EntityQuery.cpp  RTDCmptTraits.cpp  RTDCmptViewer.cpp  RTDCmptsView.cpp  Schedule.cpp  SingletonLocator.cpp  SingletonsView.cpp  SysFuncGraph.cpp  SysFuncGraph.h  SysFuncGraph.hpp  SystemFunc.cpp  SystemMngr.cpp  SystemSchdule.cpp  SystemTraits.cpp  World.cpp
(+62 files in other folders)
